--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
-site_name: Training resources
+site_name: ACCESS-NRI - Training
 
 # Git repository
 repo_url: https://github.com/ACCESS-NRI/Training
-repo_name: Training resources
+repo_name: Training
 # Material default to a "master" branch, need to change to "main"
 edit_uri: edit/main/docs/
 
@@ -28,6 +28,7 @@ theme:
     - navigation.instant
     - navigation.tabs
     - navigation.tabs.sticky
+    - navigation.indexes
   logo: assets/ACCESSLogoJustPlanet.png
 
 # Extensions
@@ -45,6 +46,7 @@ markdown_extensions:
 nav:
   - Welcome: index.md
   - How-tos:
-    - Git and GitHub: 
+    - Git and GitHub:
+      - HowTos/GitAndGitHub/index.md
       - Basics: HowTos/GitAndGitHub/basics.md
       - GitHub setup: HowTos/GitAndGitHub/github_setup.md
